# cpp-seam-carving

./: CMakeCache.txt  CMakeLists.txt  README.md  a.out  carvnonymous  cmake_install.cmake
inc/: algorithm.hpp  tools.hpp
